Fix: Wrapped BrowserRouter around the entire app to fix routing issues

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,6 +6,11 @@
   margin-inline: 30px;
 }
 
+.link {
+  text-decoration: none;
+  color: var(--very-dark-blue-light-mode-text);
+}
+
 .button {
   appearance: none;
   background-color: transparent;
